--- a/trip-api-service/build.gradle
+++ b/trip-api-service/build.gradle
@@ -9,6 +9,14 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    wsimportClasspath {
+        canBeResolved = true
+        canBeConsumed = false
+    }
+}
+
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -17,6 +25,46 @@ dependencies {
     implementation("org.glassfish.jersey.inject:jersey-hk2:4.0.0-M2")
     implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.3'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.1'
+
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.4'
+    implementation 'com.sun.xml.ws:jaxws-ri:4.0.3'
+
+    wsimportClasspath 'com.sun.xml.ws:jaxws-tools:4.0.3'
+
+
+}
+
+tasks.register('wsimport', Exec) {
+    def outputDir = "$buildDir/generated-sources/wsimport"
+    def classOutputDir = "$buildDir/classes/wsimport"
+    def packageName = "com.client.generated"
+    def wsdlUrl = "http://localhost:8082/ws/trip?wsdl"
+
+    doFirst {
+        println "Creating output folders:"
+        println "  Sources: $outputDir"
+        println "  Classes: $classOutputDir"
+        file(outputDir).mkdirs()
+        file(classOutputDir).mkdirs() // ✅ this line is critical
+    }
+
+    commandLine 'java',
+            '-cp', configurations.wsimportClasspath.asPath,
+            'com.sun.tools.ws.WsImport',
+            '-s', outputDir,
+            '-d', classOutputDir,
+            '-p', packageName,
+            wsdlUrl
+}
+
+
+sourceSets {
+    main {
+        java {
+            srcDir "$buildDir/generated-sources/wsimport"
+        }
+    }
 }
 
 test {
