feat(kafka): install Kafka, create trip-scheduled topic, and set up common dependencies in parent Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,30 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
+subprojects {
+    group = rootProject.group
+    version = rootProject.version
 
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    repositories {
+        mavenCentral()
+    }
+
+    // Move dependencies block inside afterEvaluate to ensure it's valid for subprojects
+    afterEvaluate { project ->
+        dependencies {
+            testImplementation platform('org.junit:junit-bom:5.10.0')
+            testImplementation 'org.junit.jupiter:junit-jupiter'
+            implementation 'org.apache.kafka:kafka-clients:3.6.1'
+
+            implementation 'org.slf4j:slf4j-log4j12:2.0.9'
+            implementation 'ch.qos.logback:logback-classic:1.4.11'
+
+        }
+    }
+
+    test {
+        useJUnitPlatform()
+    }
 }
 
-test {
-    useJUnitPlatform()
-}
+
