--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'trip-sharing-system'
 include 'trip-api-service'
 include 'matching-service'
 include 'notification-service'
+include 'common-module'
