--- a/matching-service/build.gradle
+++ b/matching-service/build.gradle
@@ -13,6 +13,14 @@ configurations {
     jaxb
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.example.trip.MatchingServiceApplication'
+        )
+    }
+}
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
