--- a/matching-service/build.gradle
+++ b/matching-service/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.aerospike:aerospike-client:6.2.0'
 
     jaxb 'org.glassfish.jaxb:jaxb-xjc:4.0.5'
+
+    implementation project(':common-module')
 }
 
 sourceSets {
