--- a/trip-api-service/build.gradle
+++ b/trip-api-service/build.gradle
@@ -29,11 +29,14 @@ jar {
 dependencies {
 
 
-    implementation("org.glassfish.jersey.containers:jersey-container-grizzly2-http:4.0.0-M2")
-    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
-    implementation("org.glassfish.jersey.inject:jersey-hk2:4.0.0-M2")
+    implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:3.1.3'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.3'
     implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.3'
+    implementation 'org.glassfish.jersey.ext:jersey-bean-validation:3.1.3'
+
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.1'
+
+    implementation 'org.glassfish.jersey.ext:jersey-bean-validation:3.1.3'
 
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
     implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.4'
@@ -43,6 +46,11 @@ dependencies {
 
     implementation project(':common-module')
 
+    implementation 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
 }
 
